fix scrollbar overlay

--- a/src/components/app-page-projects/app-page-projects.css
+++ b/src/components/app-page-projects/app-page-projects.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 1rem;
+  min-height: 55px;
   overflow-x: auto;
   flex-wrap: nowrap;
   white-space: nowrap;
